RESOLVED FIXED109123
[V8] StringCache::m_stringCache should be HashMap<StringImpl*, Persistent<String>>
https://bugs.webkit.org/show_bug.cgi?id=109123
Summary [V8] StringCache::m_stringCache should be HashMap<StringImpl*, Persistent<Str...
Kentaro Hara
Reported 2013-02-06 18:15:05 PST
Currently StringCache::m_stringCache is implemented as HashMap<StringImpl*, v8::String*>. Given that v8::String* can change when a GC is triggered, this is dangerous. We should use HashMap<StringImpl*, v8::Persistent<v8::String>> instead.
Attachments
Patch (3.81 KB, patch)
2013-02-06 18:20 PST, Kentaro Hara
no flags
Kentaro Hara
Comment 1 2013-02-06 18:20:28 PST
WebKit Review Bot
Comment 2 2013-02-07 10:58:46 PST
Comment on attachment 186971 [details] Patch Clearing flags on attachment: 186971 Committed r142154: <http://trac.webkit.org/changeset/142154>
WebKit Review Bot
Comment 3 2013-02-07 10:58:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.