Source/WebCore/bindings/v8/V8ValueCache.cpp
@@ -85,16 +85,13 @@ v8::Handle<v8::String> StringCache::v8ExternalStringSlow(StringImpl* stringImpl,
     if (!stringImpl->length())
         return v8::String::Empty(isolate);
 
-    v8::String* cachedV8String = m_stringCache.get(stringImpl);
-    if (cachedV8String) {
-        v8::Persistent<v8::String> handle(cachedV8String);
-        if (handle.IsWeak()) {
-            m_lastStringImpl = stringImpl;
-            m_lastV8String = handle;
-            if (handleType == ReturnUnsafeHandle)
-                return handle;
-            return v8::Local<v8::String>::New(handle);
-        }
+    v8::Persistent<v8::String> cachedV8String = m_stringCache.get(stringImpl);
+    if (cachedV8String.IsWeak()) {
+        m_lastStringImpl = stringImpl;
+        m_lastV8String = cachedV8String;
+        if (handleType == ReturnUnsafeHandle)
+            return cachedV8String;
+        return v8::Local<v8::String>::New(cachedV8String);
     }
 
     v8::Local<v8::String> newString = makeExternalString(String(stringImpl));
@@ -108,7 +105,7 @@ v8::Handle<v8::String> StringCache::v8ExternalStringSlow(StringImpl* stringImpl,
     stringImpl->ref();
     wrapper.MarkIndependent();
     wrapper.MakeWeak(isolate, stringImpl, cachedStringCallback);
-    m_stringCache.set(stringImpl, *wrapper);
+    m_stringCache.set(stringImpl, wrapper);
 
     m_lastStringImpl = stringImpl;
     m_lastV8String = wrapper;
